#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-21
2017-11-06 Mikhail S. Dubrovin
- RunProcUtils - update docstring
- SubprocUtils - get rid of RunProcUtils utils and update tests

2017-11-03 Mikhail S. Dubrovin
- RunProcUtils.py - fix issue in saving records in the log file

Tag: V01-00-20
2017-11-02 Mikhail S. Dubrovin
- cosmetic update in apps, add #!@PYTHON@

Tag: V01-00-19
2017-10-31 Mikhail S. Dubrovin
- update data status processing

Tag: V01-00-18
2017-10-19 Mikhail S. Dubrovin
- GlobalUtils.evaluate_limits - is modified

2017-10-16 Mikhail S. Dubrovin
- Documentation improvement - in all modules add titles for better visibility.

Tag: V01-00-17
2017-10-13 Mikhail S. Dubrovin
- Jungfrau - add real segment geometry and all masks
	modified:   src/CalibParsBaseJungfrauV1.py
	modified:   src/GeometryAccess.py
	modified:   src/GeometryObject.py
	modified:   src/RunProcUtils.py
	modified:   src/SegGeometry.py
	modified:   src/SegGeometryEpix100V1.py
	new file:   src/SegGeometryJungfrauV1.py
	modified:   src/SegGeometryStore.py
	new file:   src/SubprocUtils.py

Tag: V01-00-16
2017-10-10 Mikhail S. Dubrovin
- add stuff for Jungfrau
  - CalibPars*, GlobalUtils - add new type of constants pixel_offset, pixel_datast
  - add ex-get-epix-id.py, RunProcUtils.py

Tag: V01-00-15
2017-10-02 Mikhail S. Dubrovin
- GlobalUtils - move methods from jungfrau_ndarr_dark_proc

Tag: V01-00-14
2017-09-27 Mikhail S. Dubrovin
- GlobalUtils - add methods for file deployment etc.

Tag: V01-00-13
2017-09-22 Mikhail S. Dubrovin
- DCMethods - cleanup code, remove old versions of methods.

Tag: V01-00-12
2017-09-21 Mikhail S. Dubrovin