@@ -11,6 +11,13 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-22
+2017-11-07 Mikhail S. Dubrovin
+- Improve of run proccessing control
+  - app/proc_control - add parameter ofprefix to redirect work files
+  - src/DCUtils, GlobalUtils - do not print msg about existing directory
+  - src/RunProcUtils, SubprocUtils - cosmetic update for docstring
+
 Tag: V01-00-21
 2017-11-06 Mikhail S. Dubrovin
 - RunProcUtils - update docstring
